syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-category/api/proto/v1";

message CreateCategoryRequest {
  string userId = 1;
  optional string categoryId = 2;
  string name = 3;
  optional string emoji = 4;
}

message CreateCategoryResponse {
  string categoryId = 1;
}
